First model tentative

--- a/Multipactor/Parallel Plate Waveguide.ipynb
+++ b/Multipactor/Parallel Plate Waveguide.ipynb
@@ -15,18 +15,233 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1.25"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
     }
    ],
    "source": [
-    "2.5/2"
+    "%pylab inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.constants import e, m_e, pi, eV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below we define some parameters and geometrical constants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "d = 1e-3 # m\n",
+    "f = 12e9 # Hz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "omega = 2*pi*f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def V_th(v_f, v_i, omega_d, n):\n",
+    "    '''\n",
+    "    Threshold voltage\n",
+    "    '''\n",
+    "    V_th = omega_d/(2*e/m_e)*sqrt((v_f - v_i)**2 + (omega_d - (2*n-1)/2*pi*(v_f + v_i))**2)\n",
+    "    \n",
+    "    return V_th\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.text.Text at 0xb91df60>"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": [
+       "iVBORw0KGgoAAAANSUhEUgAAAYQAAAEUCAYAAAAr20GQAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\n",
+       "AAALEgAACxIB0t1+/AAAGHBJREFUeJzt3XmwpXV95/H3RxQzY3SIGwKhBA0gHUAMpjEmll2lIsYh\n",
+       "SBnc1zCODiMSxqkIbjQaFZ2A60hiFEWCLM5EhFAu6NAuNY6EEbQVG0Fth0ZtJ66gGQX9zh/P07mH\n",
+       "4+nb996zPGd5v6pu9XmW85xv/+rW+d5n+TxPqgpJku7SdQGSpOlgQ5AkATYESVLLhiBJAmwIkqSW\n",
+       "DUGSBIygISQ5N8n2JJt75m1Msi3Jte3PE3qWnZbkxiRbkhw17OdLkkYjw+YQkjwKuA14f1Ud2s47\n",
+       "Hbi1qs7uW3cd8AHg94F9gE8AB1bVr4YqQpI0tKH3EKrqM8APByzKgHnHAhdW1e1VtRW4CVg/bA2S\n",
+       "pOGN8xzCSUm+mOQ9SfZo5+0NbOtZZxvNnoIkqWPjagjnAPsDhwPfAc5aZl3vnSFJU+Cu49hoVX1v\n",
+       "x+sk7wYubydvAfbtWfW323l3kuQm4MHjqE2S5tjXq+p31vzuqhr6B9gP2NwzvVfP61OAD7Sv1wHX\n",
+       "AbvT7EF8nfbEdt/2ahR19Wxv4yjXX275oGX981YzvdraHQvHwrGYjbFY6fxVjkUN838feg8hyYXA\n",
+       "o4H7JrkZOB3YkORwmsNB3wRe2FZ6fZJLgOuBO4ATq/1fjNmmEa+/3PJBy/rnrXZ6lFa77V2tv9zy\n",
+       "Qcv65612epRWu+1drb/c8kHL+uetdnqUVrvtXa2/3PJBy/rnrXZ6lFa77V2tv7PlK52/2uk1G/qy\n",
+       "03FIUlU16CqlhZNkY1Vt7LqOaeBYLHEsljgWS4b97jSpPP02dV3AFNnUdQFTZFPXBUyRTV0XMC/c\n",
+       "Q5CkOeEegiRpJGwIkiTAhiBJatkQJEmADUGS1LIhSJIAG4IkqWVDkCQBNgRJUsuGIEkCbAiSpJYN\n",
+       "QZIE2BAkSS0bgiQJsCFIklo2BEkSYEOQJLVsCJIkwIYgSWrZECRJgA1BktSyIUiSALhr1wVIkoaT\n",
+       "EOBxw27HhiBJMyzhj4AzgX8z7LY8ZCRJMyjhsIR/AM4H/gY4fNht2hAkaYYk7J9wPvBx4ErgIVWc\n",
+       "X8Uvh922DUGSZkDC/RPeBlwDfB04oIq3VvHzUX2GDUGSpljCvRLOAL4KFHBwFRuruHXUn2VDkKQp\n",
+       "lHD3hD8HbgT2B46o4uQqvjeuz/QqI0maIgm7Ac8CzgA2A4+tYvMkPtuGIElToM0SHAO8HvgR8Kwq\n",
+       "PjvJGmwIktSxvizBacA/VFGTrsOGIEkdSTiMZo/gEODVwAWjuHx0rTypLEkTNiBLcFAV7++yGcAI\n",
+       "GkKSc5NsT7K5Z969k1yZ5GtJPp5kj55lpyW5McmWJEcN+/mSNCsmkSUYxij2EN4LHN0371Tgyqo6\n",
+       "EPhkO02SdcBTgXXte96ZxL0USXNtklmCYQz9ZVxVnwF+2Df7T4Dz2tfnAU9qXx8LXFhVt1fVVuAm\n",
+       "YP2wNUjSNOoiSzCMcf11vmdVbW9fbwf2bF/vDWzrWW8bsM+YapCkTiTslvBc4AbgMTRZgudUsbXb\n",
+       "ypY39quMqqqSLHf51MBlSTb2TG6qqk2jrEuSRm3SWYIkG4ANo9reuBrC9iQPqKrvJtkL/mX36BZg\n",
+       "3571frud92uqauOYapOkkesiS9D+obxpqYacPsz2xnXI6DLgue3r5wKX9sx/WpLdk+wPHABcPaYa\n",
+       "JGnsep5L8HfAu4DDq7i8i2DZsIbeQ0hyIfBo4L5JbqYJV5wJXJLkBGAr8BSAqro+ySXA9cAdwIlV\n",
+       "NXODJkkJ+wOvAY6iOUT05Gm5fHStMo3fx0mqqtJ1HZLUL+H+wCuBZwJvB86u4ifdVtUY9rvTDIAk\n",
+       "rcAyWYKpaAajYEOQpGUMyBI8fJqzBMPw5naSNEDfcwm+DDyuii91W9V42RAkqUdfluDHwLOr+Ey3\n",
+       "VU2GDUGSWj1Zgj3o8LkEXbEhSFp40/Zcgq54UlnSwup5LsGVTNFzCbpiQ5C0cKb9uQRdsSFIWhiL\n",
+       "kCUYhg1B0txbpCzBMDypLGluLWKWYBg2BElzp80S/FuaK4d+wgJlCYZhQ5A0VxY9SzAMG4KkuZBw\n",
+       "KM0ewaEscJZgGJ5UljTT2izB+4FPtD8LnSUYhg1B0kxqswRvpckSfAOzBEOzIUiaKW2WYCNNliCY\n",
+       "JRgZG4KkmdBmCU4GvgY8mCZL8BKzBKPjSWVJU63NEjyT5vnFXwaOMkswHjYESVPJLMHk2RAkTZ2+\n",
+       "LMHLgcvNEoyfDUHS1OjJEhxGkyX4Oy8fnRxPKkvqXF+W4JPAgVWcZzOYLBuCpM70ZQm+SZMleItZ\n",
+       "gm7YECRN3E6yBKebJeiWDUHSxJglmG6eVJY0dmYJZoMNQdLYmCWYLTYESWNhlmD22BAkjZRZgtnl\n",
+       "SWVJI5Gwn1mC2WZDkDSUnizB/8YswUyzIUhak4R7miWYLzYESavSkyW4EbMEc8WTypJWpC9L8BXM\n",
+       "EsydsTaEJFtprj3+JXB7Va1Pcm/gYuCBwFbgKVX1o3HWIWnt2izBE4E3ALcCz6ni091WpXFI1fgu\n",
+       "C07yTeCIqvpBz7w3Af9UVW9K8jLgt6rq1L73VVVlbIVJWhGzBLNl2O/OSZxD6C/uT4Dz2tfnAU+a\n",
+       "QA2SViHh0ITLgQuAvwUeWsVlNoP5Nu6GUMAnklyT5AXtvD2ranv7ejuw55hrkLRCA7IEB5klWBzj\n",
+       "Pqn8h1X1nST3A65MsqV3YVVVEv/ikDqWcH/gFcCzgHfQZAm8fHTBjLUhVNV32n//b5IPAeuB7Uke\n",
+       "UFXfTbIXDL5ULcnGnslNVbVpnLVKiyjhnsBLgZNoDg+tq2L78u/StEiyAdgwsu2N66Rykn8N7FZV\n",
+       "tya5B/Bx4AzgscD3q+qNSU4F9vCksjRZCXcHXgScRnN46NVVfKPbqjSsYb87x7mHsCfwoSQ7PueC\n",
+       "qvp4kmuAS5KcQHvZ6RhrkNRjQJbg8VV8sduqNC3GetnpWrmHII3WgCzBqWYJ5s807yFImgJmCbRS\n",
+       "NgRpTvlcAq2WN7eT5oxZAq2VDUGaEwn328lzCf5fx6VpRtgQpBnXPpfgdJaeS7DO5xJoLWwI0oxq\n",
+       "n0vwEprnEhwArG+fS2CwTGviSWVpxrRZgmfQZAmuxyyBRsSGIM2InizB64HbgOeaJdAo2RCkGZDw\n",
+       "hzRZgnvT3G7CLIFGzoYgTbE2S/A64KHA6cD5Xj6qcfGksjSF2izBeTRZgqtosgTvsxlonGwI0hRp\n",
+       "swRvockSfIsmS/BmswSaBBuCNAV6sgRbgN1osgSvNkugSbIhSB0akCX4/SpOMkugLnhSWeqAWQJN\n",
+       "IxuCNEFmCTTNbAjShPRlCV4OXGaWQNPEhiCNmVkCzQpPKktjYpZAs8aGII2YWQLNKhuCNCJmCTTr\n",
+       "bAjSkMwSaF54UllaozZL8HTgtZgl0BywIUir1GYJ/hh4A2YJNEdsCNIqmCXQPLMhSCuQcAhNutgs\n",
+       "geaWJ5WlZSQ8sM0SfBKzBJpzNgRpgJ4swRdosgQHmiXQvLMhSD36sgR3ZSlL8OOOS5PGzoYg8WtZ\n",
+       "ggNpsgQvNkugReJJZS20vizBV4Gjq7iu26qkbtgQtJD6sgQ/BZ5Xxae6rUrqlg1BC8csgTSYDUEL\n",
+       "wyyBtDxPKmvumSWQVsaGoLlllkBanU4aQpKjk2xJcmOSl3VRg+aXWQJpbSbeEJLsBrwDOBpYBzw9\n",
+       "ycGTrkPzxyyBNJwu9hDWAzdV1daquh24CDi2gzo0JxJ2S3gWzR7B0TRZgmdW8Y2OS5NmShdXGe0D\n",
+       "3NwzvQ04soM6NOPMEkij1UVD8HpvDS3hkTRZgvtglkAaiS4awi3Avj3T+9LsJdxJko09k5uqatN4\n",
+       "y9IsaLMErwMOxyyBFlySDcCGkW2varJ/VCW5K3AD8Bjg28DVwNOr6qs961RVZaKFaaolPBA4A3gC\n",
+       "zZ7BOV4+Kt3ZsN+dE99DqKo7krwY+BiwG/Ce3mYg9Uq4H80hoecA/5UmS+Dlo9IYTHwPYSXcQ1DC\n",
+       "PYFTgJOBC4HXevmotLxhvztNKmuqJOyecBJNluAgYL1ZAmkyvLmdpkLCXYBnAK+hzRP4XAJpsmwI\n",
+       "6lRPluD1wM+A55slkLphQ1BnerIE96U5cfxhswRSdzyHoIlLOCThwzS3LXkvcGgVl9oMpG7ZEDQx\n",
+       "7XMJ3gf8D+BTNJeQvtdgmTQdbAgau/a5BG+meS7BzcABVZxtsEyaLjYEjU37XIJX01w1dDfgd6t4\n",
+       "lcEyaTrZEDRyy2QJvttxaZKW4VVGGhmzBNJssyFoaGYJpPlgQ9BQzBJI88NzCFqThN81SyDNFxuC\n",
+       "VqUnS3AVZgmkuWJD0Iok3NcsgTTfbAhaVsJvmiWQFoMNQQO1WYIXs5QlONIsgTTfvMpId9JmCZ4O\n",
+       "vJbm2ddPMEsgLQYbgoB/yRI8AXgD8M/An1WxqdOiJE2UDUFmCSQBnkNYaAOyBIeZJZAWlw1hAS2T\n",
+       "Jbij28okdcmGsED6sgTbMEsgqYcNYQH0ZAluAHanyRK80iyBpF42hDnWlyV4CM1zCf6jWQJJg3iV\n",
+       "0RwySyBpLWwIc8QsgaRh2BDmhFkCScPyHMKMM0sgaVRsCDPKLIGkUbMhzBizBJLGxYYwI9oswato\n",
+       "nktglkDSyNkQplxfluBgmucSmCWQNHJeZTSlzBJImjQbwpQxSyCpKzaEKZLwBzRZgvvTZAm8fFTS\n",
+       "xIzlHEKSjUm2Jbm2/XlCz7LTktyYZEuSo8bx+bOmzRJcClwMnAccWsWHbAaSJmlcewgFnF1VZ/fO\n",
+       "TLIOeCqwDtgH+ESSA6vqV2OqY6olPBDYCDwReCPwNC8fldSVcV5llAHzjgUurKrbq2orcBOwfow1\n",
+       "TKU2S3A2TZbgFposwVk2A0ldGmdDOCnJF5O8J8ke7by9acJUO2yj2VNYCH1ZgrsDh5glkDQt1nzI\n",
+       "KMmVwAMGLHoFcA7wmnb6tcBZwAk72dTA4+RJNvZMbqqqTWsqdAok7A68AHglsAl4RBU3dVqUpJmX\n",
+       "ZAOwYWTbqxrvecsk+wGXV9WhSU4FqKoz22UfBU6vqs/3vaeqatAhp5nSZgmeCvwlzeGx06r4QrdV\n",
+       "SZpXw353jusqo716Jo8DNrevLwOelmT3JPsDBwBXj6OGLiUk4fHANcApwAuqeLzNQNI0G9dVRm9M\n",
+       "cjjN4aBvAi8EqKrrk1wCXA/cAZxY495FmbCE9TRZgn1osgR/7+WjkmbB2A8ZrcUsHjJKOAh4HfAI\n",
+       "4AzwVtSSJmsqDxktkoR9Et4FfBb4R5rnEvytzUDSrLEhrFHCbyWcCXwJ+BFwUBVvrOJnHZcmSWti\n",
+       "Q1ilhH+V8BfA14D7AA+t4i+q+EHHpUnSULy53Qol3BV4HnA6zZVRj6piS6dFSdII2RB2ob0d9XE0\n",
+       "J4y3A8dX8b+6rUqSRs+GsIyEDTSXkP4G8J+Aj3oJqaR5ZUMYIOFwmgfUHERzu4mLqljIO7JKWhye\n",
+       "VO6R8KCEC4CPAFcAD6niAzYDSYvAhgAk7JnwdpqTxTfQZAneUcUvOi5NkiZmoRtCwr0SzqC5lcav\n",
+       "gHVVvKaKWzsuTZImbiEbQsLdE06myRLsDzy8ipOr+F7HpUlSZxbqpHLCbsAzaJ7V8BXgqCq+1G1V\n",
+       "kjQdFqIhtFmCP6a5cug24LlVfLrbqiRpusx9Q0j4A5oH2N+H5nbUl5klkKRfN7fnEBLWJVwKXAy8\n",
+       "Fzisig/bDCRpsLlrCAn7JpxL8+ziz9DchfS9Vfyy28okabrNTUNIuE/CXwHXAd+hyRKcVcU/d1ya\n",
+       "JM2EmW8ICfdIeDmwBbgHcEgVr6jiRx2XJkkzZWZPKifcDTgBeBXN08oeWcWN3VYlSbNr5hpCewnp\n",
+       "8cBfAt8Cjq3imm6rkqTZN1MNIeGxNLejBjixik90WY8kzZOZaAgJR9A0gv2AVwD/zTuQStJoTfVJ\n",
+       "5YQDEi4GLgf+O83N5y6xGUjS6E1tQ0g4B/gc8EXggCr+uorbOy5LkubWNB8y+ilNqOz7XRciSYsg\n",
+       "VdN3J4ckVVXpug5JmiXDfndO7SEjSdJk2RAkSYANQZLUsiFIkgAbgiSpZUOQJAE2BElSy4YgSQJs\n",
+       "CJKk1pobQpLjk3wlyS+T/F7fstOS3JhkS5KjeuYfkWRzu+ytwxQuSRqtYfYQNgPHAZ/unZlkHfBU\n",
+       "YB1wNPDOJDui1OcAJ1TVAcABSY4e4vMXQpINXdcwLRyLJY7FEsdidNbcEKpqS1V9bcCiY4ELq+r2\n",
+       "qtoK3AQcmWQv4J5VdXW73vuBJ6318xfIhq4LmCIbui5gimzouoApsqHrAubFOM4h7A1s65neBuwz\n",
+       "YP4t7fyxW+1fELtaf7nlg5b1z1vt9Cg5FmvftmOx8vUdi10vX+n8SY7Fsg0hyZXtMf/+n2NGVcCE\n",
+       "bBjx+sstH7Ssf95qp0dptdve1frLLR+0rH/eaqdHabXb3tX6yy0ftKx/3mqnR2m1297V+sstH7Ss\n",
+       "f95qp0dptdve1fo7W77S+audXrOhb3+d5CrgpVX1hXb6VICqOrOd/ihwOvAt4KqqOrid/3Tg0VX1\n",
+       "ogHbvAl48FCFSdLi+XpV/c5a3zyqB+T03n/7MuADSc6mOSR0AHB1VVWSnyQ5ErgaeDbwtkEbG+Y/\n",
+       "JElam2EuOz0uyc3AI4ArknwEoKquBy4Brgc+ApxYS7shJwLvBm4Ebqqqjw5TvCRpdKbyiWmSpMkz\n",
+       "qSxJAmwIkqTWzDSEJA9Jck6SS5Kc0HU9XUpybJJ3JbkoyeO6rqdLSfZP8u4kH+y6lq4kuUeS89rf\n",
+       "iWd0XU+X/H1YspbviZk7h5DkLsBFVfWUrmvpWpI9gL+qqn/XdS1dS/LBqjq+6zq6kOTZwA+q6ook\n",
+       "F1XV07quqWuL/PvQbzXfExPfQ0hybpLtSTb3zT+6vRnejUletpP3HgNcAVw0iVrHbZixaL0SeMd4\n",
+       "q5yMEYzFXFnleOwD3Ny+/uVEC50AfzeWrHEsVv49UVUT/QEeBTwM2Nwzbzeaex7tB9wNuA44mCar\n",
+       "8GZg775tfHjSdU/TWNDkPt4IPKbr/0PXY9Gz7ge7/j90OB7PAp7YrnNh17V3ORbz+vuwxt+LVX9P\n",
+       "THwPoao+A/ywb/Z6mlzC1qq6nWYP4NiqOr+qTqmqbyd5dJK3Jvkb4KpJ1z0Oax0L4CTgMcCfJnnh\n",
+       "ZKsejyF+L+6d5K+Bw+fpr8TVjAfw98CTk7yTJhg6V1YzFvP6+7DDKn8vXswqvydGlVQeVu8uLzQ3\n",
+       "wTuyd4Wq+hTwqUkW1ZGVjMXb2EnKe86sZCx+APza7U/m1MDxqKqfAX/WTUmd2dlYLNLvww47G4uT\n",
+       "gLevZkPTcpXRbJ3ZHi/HYoljcWeOxxLHYsnIxmJaGsItwL490/ty51tlLxLHYoljcWeOxxLHYsnI\n",
+       "xmJaGsI1NE9Q2y/J7jRPXJu7Y6Er5FgscSzuzPFY4lgsGdlYdHHZ6YXA/wQOTHJzkudX1R00J0A+\n",
+       "RnNTvIur6quTrm3SHIsljsWdOR5LHIsl4x6LmQumSZLGY1oOGUmSOmZDkCQBNgRJUsuGIEkCbAiS\n",
+       "pJYNQZIE2BAkSS0bgiQJsCFoxiR5SZLrk5y/zDrPS/Jrd3lMsjHJtiQbe+YdneTzSb6a5Nr2cYP7\n",
+       "tsvel+TJfdu4bYT/nRVLckqSbw36f0mjMi23v5ZW6j/QPPDj22t4bwFnV9XZAEkOobmN+DFVdUM7\n",
+       "7xiaB43c3K7fH+XvJNpfVW9O8gPg4V18vhaDewiaGe2DTx4EfDTJn/cte36SG5J8Hnjkcpvpef0y\n",
+       "4HU7mgFAVV3ePoRk0Pq9n/eado/i2iS3JDl3wDpbk7y+XeeaJL+X5ONJbtrxwJIkG5J8KsmlSb6e\n",
+       "5Mwkz05ydZIvJXnQrmqRRsWGoJlRVS8Cvg1sqKq37JifZC9gI00j+CNgHSv7S34d8IVllgf4Lz1f\n",
+       "/Nfu2G5VvbqqHgZsAL7P4AeRFPCtdr1PA+8DjgMeAZzRs95hwAtZejzog6tqPfBumqfj9W5PGhsb\n",
+       "gubBkcBVVfX99hGCF7PKv6aT3CfJde1exkvb2QX856p62I6f3u0mCXABcFZVXbuTTe+4DfFm4HNV\n",
+       "9dOq+ifg50nu1S77x6raXlW/oHk27sfa+V+mOXwlTYQNQfOguHMDWGkz+ApwBEDbTA4H3gX85gq3\n",
+       "tRH4P1V13jLr/Lz991fAL3rm/4qlc3g/75v/8wHrSGNnQ9A8uBp4dPuA9bsBx6/wfW8CXpHkIT3z\n",
+       "7sEKDs20J58fA5y8ws/y+L+mng1BM6s9pk9VfYfmr/XPAZ+l+ct/l1/qVfVlmi/09yfZkuSzwEHA\n",
+       "B3pX639b++8pwN7A1e35hY1tTVckecCgj+vbVu1k/nLvkcbKB+RoYSQ5Hbitqs7qupa1SPI84Iiq\n",
+       "OmlX60pr4R6CFsltwL/vDabNiiSnAKcCP+66Fs0v9xAkSYB7CJKklg1BkgTYECRJLRuCJAmwIUiS\n",
+       "Wv8fwJIAdBaWkPAAAAAASUVORK5CYII=\n"
+      ],
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xc330eb8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v_i = 0\n",
+    "\n",
+    "f_d = logspace(-3, 2, 501) # GHz.mm\n",
+    "\n",
+    "omega_d = (2*pi)*f_d*1e9*1e-3 # rad/s.m\n",
+    "\n",
+    "v_f = 20 # eV\n",
+    "v_i = 0 # eV\n",
+    "n = 2 # integer\n",
+    "\n",
+    "Vth = V_th(v_f, v_i, omega_d, n) \n",
+    "# dB\n",
+    "Pth = 10*log10(Vth**2 / 2.5)\n",
+    "\n",
+    "semilogx(f_d, Pth)\n",
+    "xlabel('f.d [GHz.mm]')"
    ]
   },
   {
@@ -55,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.1"
+   "version": "3.3.5"
   }
  },
  "nbformat": 4,
