Cleaned and finished notebook

--- a/Various_Notebooks/Checking Equations With SimPy.ipynb
+++ b/Various_Notebooks/Checking Equations With SimPy.ipynb
@@ -10,6 +10,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will reproduce the previous equation, step by step as:\n",
+    "$$\n",
+    "\\frac{\\pi e^{\\frac{A}{B}} - e^{i E}}{C D}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
@@ -45,19 +55,19 @@
        "      ╲╱ n ⋅(2⋅n)! "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "L1=Limit(2**(2*n) * factorial(n)**2 * log(7) / factorial(2*n) / sqrt(n), n, +oo)\n",
-    "L1"
+    "A=Limit(2**(2*n) * factorial(n)**2 * log(7) / factorial(2*n) / sqrt(n), n, +oo)\n",
+    "A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -73,81 +83,18 @@
        "╲╱ π ⋅log(7)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "L1.doit()"
+    "A.doit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAALoAAAA6BAMAAAD1kF4aAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAEHaZVCKJq0S73TLv\nZs2LrggmAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAExElEQVRYCbWXW2gcVRjH/2ezO9lLZnctWLSI\nu1gqFAuuxstDlSy+FBTJIl4falcrlRatsYqpeMkW8UFRG2/ggzWrWKxayNIK9qGSVFBTBbM0NX2R\nmnpXcNuV1EYTM37fOWdmZ8ImGZedD/ac7/I/vz1z5uyZWYBsxVXALfexF4CJnc/tDV+dyAaAJmQI\neHI18GwwdBNI1oFwYPTYB8ChYOjhCnauOiVyPuniks0ln1Ipm+yuiG2/pH0O6QAe9SltQXYzcHcL\nw3wO2Qqs8iltQbb7ZTzYwjCfQzqtySpCFpnffeATrGQ982ls+WjNsdv+1yifYnP96bFE3ihc5kN/\nmi9R258+9MAJmHNpxPCwD3WvVZGq8+48MT7nQw8cAUby+BhlH+pOy1GZw3kfA8QZoLOK60FH0/I2\nfM7RdEw57hLOZ0CsIOqYWULjlEasquOvd7wlnJfSOIZQGZ8voXFKpnXW8emkX94Sj9ApFqviseWl\npBj6x5esRdFFwfzm9Gyi1nSL8/I17CH6cQRnSWsqODjE+F8B0tFrlQLEd1h0dgRnw66lSdknZht6\nNeNNbwc3c2BdIUB6dDZAOD8MgjPx6QL2Jwtib2hWVJxonNxegYpsWbLPW40MUpzIQbxZ9hYoSqaB\nJ1T2Lu4OAhd+qWJXe/uW1xzZW648u0xAnL4imVtQQWSIakmVPcXd+/T5QcWNNpJDb1XLjMZ2VK/w\nl7JuHdFTeXuEKEhPvDpA9FCRA9mGjpLXOGLP5wKVppEqa9m3aiSnj3MDenAicpLouwmlLJzVzuWU\nEqMcdPGwjb8B0cbj+wYuUGYMmSklc23H6Kislak1kkTfzqE0Dx0/cu55bopEN6bYk6bp5NPKSNmm\nvKrQnHpy7BrcfsP0nzHxlSp66Zs5yY1ZIHqyaF5XUbIGne8FKYTzaL91QL040QMZIkt0MbPygjE1\nzEs/yck99FkBomd23fNCiTOATU9s4xmSLDlfk7afDi31+I7naf4geng2SxppXvqNnHuXPkWm9x6Q\nEm5sOvAAXQ3JelxHoXqP7CoBNzG9Y548ZV76CCfpqugPF9F7ftUiN73rCL0POnmXQ3RRZHp8zdMy\nbdRqv39dq/HFgveMGkb0lWD6O3dMcQXba7X9tRoveKSAGG3TpvR4HuH+/oEvsplKJl+QA+Gdu9wu\ntDIb+vvndohZMR1RKntlUnXE/tW7Slecju8qbedBfIdMqajSXrpzV4GjMM+IGUOpbDqNjdMLnpTp\nitMZfeymBvE4UpWiSnvp3Zy8X1b+RucgZhfQzSp6s4CUSZWriZYpMIbOVffAvFLnbfq14+/Rlcnb\nKJdnq/UUXepEVsvsPfNM9xuUIVnI2e8I3VuUqr1a6+psukxFRrmL61siU7qx6TKUsn1OeRIbpD/h\nZBwnKu+FDo0sO2ZOh67uRZcPltFrvm0fIpVmP9ZkVraG+4tV8Lo718RnmVxlWRNn0ZVnTz49ZKp5\no7Hy6dFcIbMsM3IH+pQkUUe8Kt2NKrFIa+pLiyjxIio64aiSPL6r3sknzR9Mzy6mbTGfcv4rJWhl\n2k0/vDav5yVmkSppv13d2sRoRa7M99in90y70MR5JVEuatxqvd/bSP8JOyoaZ1xzRRvBjPoPrGOF\ncL2hV2MAAAAASUVORK5CYII=\n",
-      "text/latex": [
-       "$$\\sum_{k=0}^{\\infty} \\frac{8 \\pi}{\\left(4 k + 1\\right) \\left(4 k + 3\\right)}$$"
-      ],
-      "text/plain": [
-       "  ∞                      \n",
-       " ____                    \n",
-       " ╲                       \n",
-       "  ╲           8⋅π        \n",
-       "   ╲  ───────────────────\n",
-       "   ╱  (4⋅k + 1)⋅(4⋅k + 3)\n",
-       "  ╱                      \n",
-       " ╱                       \n",
-       " ‾‾‾‾                    \n",
-       "k = 0                    "
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "S1=Sum( 8*pi/(4*k+1)/(4*k+3), (k,0,+oo))\n",
-    "S1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABQAAAAUBAMAAAB/pwA+AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAdpmJMlQiZrurEN1E\n782PMUhmAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAeklEQVQIHWNggACjpgVQFnMC5wMokzuB5RuU\nyXuA7Q+UycDA+gvO5BaAM43gLHYFOPMwwxEom+VpaBeUyfv//wcGBvn///9/AoswmwSmiyWAma4M\nZowOYBaQaOBcAGWyTOCGCTIV8MNE1y/gPwAVlmbgNYAy2xk4IUwAB4sZ4OerywMAAAAASUVORK5C\nYII=\n",
-      "text/latex": [
-       "$$\\pi^{2}$$"
-      ],
-      "text/plain": [
-       " 2\n",
-       "π "
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "S1.doit().simplify()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 152,
    "metadata": {
     "collapsed": false
    },
@@ -168,19 +115,19 @@
        "0        "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "I1=Integral(exp(-t**2), (t,0,+oo))\n",
-    "I1"
+    "B=Integral(exp(-t**2), (t,0,+oo))\n",
+    "B"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false
    },
@@ -198,18 +145,18 @@
        "  2  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "I1.doit()"
+    "B.doit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false
    },
@@ -231,19 +178,19 @@
        "0          "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "I2 = Integral(3 / (t**6 + 1), (t,0,+oo))\n",
-    "I2"
+    "C = Integral(3 / (t**6 + 1), (t,0,+oo))\n",
+    "C\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -258,18 +205,18 @@
        "π"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "I2.doit()"
+    "C.doit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 156,
    "metadata": {
     "collapsed": false
    },
@@ -290,19 +237,19 @@
        "-∞          "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "I3 = Integral(exp(-pi*t**2), (t,-oo,+oo))\n",
-    "I3"
+    "D = Integral(exp(-pi*t**2), (t,-oo,+oo))\n",
+    "D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -317,120 +264,18 @@
        "1"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "I3.doit()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Conclusion"
+    "D.doit()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAIYAAAAqBAMAAACEiT43AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAzRAiu5mrdu/dZoky\nVEQKohj3AAAACXBIWXMAAA7EAAAOxAGVKw4bAAADAUlEQVRIDa1VTWgTURD+sptmm+6mGxAUROj2\nUKl4yKJe9JIFUaEHWxQF62URLUIPTS31j0KrgkJVLAqC4GGrh/bgIeLBQ4Xk5MnS3KTgIR57i60/\naNU47+2Pb1djd6kDmflmvplv3+a9vABAyiC3OZP7jc0JANKhkU1rAJP/V6PDSfZaku31C+sYTSCh\nLRwE3v+h0Xk9gUYaK4BiuxO/19FbTaCRQsEAtkc1ziWQoNZl+hQNPhOsQ1vl+UZOGXA7pC0UMzZP\nAo2UR7otLb1mutROg6L33ECj6JEtp0OEdHw3y7fxYqBxKtSzUZJtfmUt88ydvPfQYRG45YYNfOdF\nyF3N5nevrVgX+2W3rA1AOj3e+rXUgtH25sIxwxttL4saHQ2eZS30OvINkQnhPcswFHPAr2XyPmKx\nbYZnly2cB86KTBgfAdJyoKE0RJYWQCbPWvgAVAyW/M2k1Sr2ddo+lVvzEYs611ZTlvSRLoS6SIk4\nly9jUJvyS9oPH7Gol5h/mrJwjdbhKE2yYMmMogvr5bgpDZt4gPtugUrffMRiwSEnlUijAnSVFhbH\n5vayumArplwWUg6/iIWiQ5kK0kiVcpVnNdWcEGnC8l30VCM1rIMtuNlsMGKpRu4d08DcRKWGNM6w\nMrofMdtBKDN96Qkvie6TmCw59CplrgHQRf0aMyJNWLcjBZaGNNi75IaGRm6WiNkKDCJ6F+hlNhSx\ndTEvsFmg3cK8qa1BWsVPkWYUabhNAhHaF+8puoVRo9uBMoPbQiuDSh49ZqQmh85Hu81otf+zo544\nSufZwXCkH+NXnWhJCy02nY/ycfJc6EtTp+LMRHvCU2HFaG+rPG2LTPjki8y/sO6E2MOhLGayRBs1\nSUfdO2r8eo05GrQ9p6189fbAmLfnhVrAxAfTwCJeKFVvgo5QYstNsRErY7DA7I4bkvisQ92anQ1m\nZgMUG/CRNkc3/Il0yUdxo/sfUjD0uj8hPfZR3LiLb8MV/ov2ZvabcYe9vj4e+5ApB4NyNYCxgFSn\ntl/htqPfsb+iFQAAAABJRU5ErkJggg==\n",
-      "text/latex": [
-       "$$\\frac{1}{\\pi} \\left(49 \\pi - e^{i \\pi^{2}}\\right)$$"
-      ],
-      "text/plain": [
-       "           2\n",
-       "        ⅈ⋅π \n",
-       "49⋅π - ℯ    \n",
-       "────────────\n",
-       "     π      "
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "total=( pi*exp(L1.doit()/I1.doit()) - exp(I*(S1).doit().simplify()) )/ I2.doit() / I3.doit()\n",
-    "total"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAFMAAAAyBAMAAADSNPrMAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAMpndu3bvImbNiRBU\nq0Qb3U6NAAAACXBIWXMAAA7EAAAOxAGVKw4bAAABq0lEQVRIDe2TO0sDQRSFz2o2j928tBTFFEIC\nNgEFC5s0YquBoCBCioBBLLYQFWzSWNlEiChYuIhpUoWAhYJESCcINoJEAkL+QMQHQsR11mQDTjaZ\n+wOcZuae882Z3XkAlCYV5imYyThQp6IelIsiVg61iYqIhKS1EPVIiFrAtXB9i1TDV9awV+9fhevU\nMF4GjddeiKUr5eLA0MokZfXdCoqyFrJm9u3n2Pa7SKjaDGLTf983jZlqPq55szoiUlKE1jWXrlY1\nzGBWgLo2UAoKmLbtSyf2aSQCwp/pBAX0zlA0cDJ0QQS1fDmLkkZDEV/OdJPDQCkf7tZtlGmoaWxR\nVpNT8CXhi9mE8NJODoEslCav29R6DuUY5G8bi5PcWg5OlvrJ6TblBXJQGvC823icpDMUh7gVp3qD\nJupOjHyxiMspsx1wYVbJHjhDAR+3AwbfGrir1T4eGOohXboU3GsYp5wW3iCfqMfWF/Xrz41HnE08\n90P+PcoOyObxhigkCqNLe9skUrpRtEUSySAHnqjoGKJUNALuHvecqDZBeMm/0+Uo1nvm/DUcGVQt\n5QcFf2vRMNuvYAAAAABJRU5ErkJggg==\n",
-      "text/latex": [
-       "$$49 - \\frac{e^{i \\pi^{2}}}{\\pi}$$"
-      ],
-      "text/plain": [
-       "         2\n",
-       "      ⅈ⋅π \n",
-       "     ℯ    \n",
-       "49 - ─────\n",
-       "       π  "
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "total.simplify()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Which leads me to the conclusion the expression is false. In fact, it seems that the sum expression shoud not have a $\\pi$ in it, and that the both exponentials should be factorized by $\\pi$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABMAAAAOBAMAAAA/Njq6AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAzXYQMplE74mrIma7\n3VSKKnSYAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAkElEQVQIHWNgVGYJY2COUHVgYGD//1+BgfEB\n8y0GBsZOLQaG7QwMjQwMnAxAcJKB4b0BhPmTgSH/AQPnblUH5q9ApgIDjwHXN64fDAz+DSCVZxHM\n+MVAUaCCiQwM/QlAte8fMBQyMMQb3GFg2G/AEMDAcJFBnYEhkIFhKQN3FQPvA+YSBgauiKkGDMxN\nmg4MAHGjI38bGCADAAAAAElFTkSuQmCC\n",
-      "text/latex": [
-       "$$50$$"
-      ],
-      "text/plain": [
-       "50"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "total2=( pi*(exp(L1.doit()/I1.doit()) - exp(I*(S1/pi).doit().simplify()) ))/ I2.doit() / I3.doit()\n",
-    "total2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 158,
    "metadata": {
     "collapsed": false
    },
@@ -454,59 +299,116 @@
        "k = 0                    "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "S1"
+    "E=Sum( 8*pi/(4*k+1)/(4*k+3), (k,0,+oo))\n",
+    "E\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAKwAAAAYBAMAAACVRAuIAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAEM3dMol2mSJE71Sr\nZruYlGYbAAAACXBIWXMAAA7EAAAOxAGVKw4bAAACeUlEQVRIDa2US2gTURSG/8ljkskk6eADlbYa\nQXTpa2EoQkcsPhZCAhZEbDt00aKmMAvRgAgVUaEuDKIV0UJdCG6EQaziLtWdZpFVlEohuBNKwIUo\nKNZz70yS6Z2ZgDRnMfec7z/3Zzj3zgDriFuT+jp2B241UQ7UAgXlih6vWYEyCStbc53ktjYJ7G00\nGl8HVzU8jhxawJ225s02/oUyMHDYK4jkBHDXZPCCAQuhDFSxw10vL9XVqOwmwbn6m2lSnWyP70Eq\nuBFSWcpiS6xDh1sa01l1BPKEEV3JuxUxr8PExbBIvfVsmVj6qVfwJw+HS1hM6v6ii+a/UyEdcJFu\npPHefczGPjTRsGf1P2Lt5rTBapW9M5DM8IVef6TjhJ2uDsuOTUxMlniLym8apWltOwevWIp3LI+y\nxyLkaUCgpwo6o2viJW8fsVnMcrQeJDRKlSqwpOENo+xWPXgO+nhF+k3NeD7pvjPUnsqxjUB42yec\nq1Qq1gzCOtVJcj6q4SrT+GXNAnMeqkVzRH3iCWd5JD7326pjexvoD2vYP2e2bdMQaWSURuVy3TxR\n5FWkzha5jnsFXgPOEGYBg2xfXK/GKu8rHwF62xA8VMkQbYWSxU1e3Lg/NHRyYdDCVKjXHoJzZF8Q\nGT57WtldprbmEEIQqYFfbtsZS7rEbUfpD0YBFFPnOYB0jY2cTyyhydWdVts2LVJpPjLPhrDhIItd\n+FCb0myXoGcf3eCxYmy6VrJtj/206MBE+rqgs2Nsxp9mEri6mu0hUOdbt4WLtkx+tLKgJG60FclJ\nTfjTVuczOv1W4Z888mCZ5uZPm63jkOwL1gTdWeXLy90x4i7/AAdgvPxgFctyAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABQAAAAUBAMAAAB/pwA+AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAdpmJMlQiZrurEN1E\n782PMUhmAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAeklEQVQIHWNggACjpgVQFnMC5wMokzuB5RuU\nyXuA7Q+UycDA+gvO5BaAM43gLHYFOPMwwxEom+VpaBeUyfv//wcGBvn///9/AoswmwSmiyWAma4M\nZowOYBaQaOBcAGWyTOCGCTIV8MNE1y/gPwAVlmbgNYAy2xk4IUwAB4sZ4OerywMAAAAASUVORK5C\nYII=\n",
       "text/latex": [
-       "$$- e^{i \\sum_{k=0}^{\\infty} \\frac{8 \\pi}{\\left(4 k + 1\\right) \\left(4 k + 3\\right)}}$$"
+       "$$\\pi^{2}$$"
       ],
       "text/plain": [
-       "      ∞                      \n",
-       "     ____                    \n",
-       "     ╲                       \n",
-       "      ╲           8⋅π        \n",
-       "       ╲  ───────────────────\n",
-       "  ⅈ⋅   ╱  (4⋅k + 1)⋅(4⋅k + 3)\n",
-       "      ╱                      \n",
-       "     ╱                       \n",
-       "     ‾‾‾‾                    \n",
-       "    k = 0                    \n",
-       "-ℯ                           "
+       " 2\n",
+       "π "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "-exp(I*S1)\n"
+    "E.doit().simplify()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAFMAAAAyBAMAAADSNPrMAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAMpndu3bvImbNiRBU\nq0Qb3U6NAAAACXBIWXMAAA7EAAAOxAGVKw4bAAABq0lEQVRIDe2TO0sDQRSFz2o2j928tBTFFEIC\nNgEFC5s0YquBoCBCioBBLLYQFWzSWNlEiChYuIhpUoWAhYJESCcINoJEAkL+QMQHQsR11mQDTjaZ\n+wOcZuae882Z3XkAlCYV5imYyThQp6IelIsiVg61iYqIhKS1EPVIiFrAtXB9i1TDV9awV+9fhevU\nMF4GjddeiKUr5eLA0MokZfXdCoqyFrJm9u3n2Pa7SKjaDGLTf983jZlqPq55szoiUlKE1jWXrlY1\nzGBWgLo2UAoKmLbtSyf2aSQCwp/pBAX0zlA0cDJ0QQS1fDmLkkZDEV/OdJPDQCkf7tZtlGmoaWxR\nVpNT8CXhi9mE8NJODoEslCav29R6DuUY5G8bi5PcWg5OlvrJ6TblBXJQGvC823icpDMUh7gVp3qD\nJupOjHyxiMspsx1wYVbJHjhDAR+3AwbfGrir1T4eGOohXboU3GsYp5wW3iCfqMfWF/Xrz41HnE08\n90P+PcoOyObxhigkCqNLe9skUrpRtEUSySAHnqjoGKJUNALuHvecqDZBeMm/0+Uo1nvm/DUcGVQt\n5QcFf2vRMNuvYAAAAABJRU5ErkJggg==\n",
+      "text/latex": [
+       "$$49 - \\frac{e^{i \\pi^{2}}}{\\pi}$$"
+      ],
+      "text/plain": [
+       "         2\n",
+       "      ⅈ⋅π \n",
+       "     ℯ    \n",
+       "49 - ─────\n",
+       "       π  "
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total=( pi*exp(A.doit()/B.doit()) - exp(I*(E).doit().simplify()) )/ C.doit() / D.doit()\n",
+    "total.simplify()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which leads me to the conclusion the expression is false ! In fact, it seems that the sum expression shoud not have a $\\pi$ in it, and that the both exponentials should be factorized by $\\pi$. \n",
+    "\n",
+    "The original web page with the mistake is http://www.brouty.fr/Maths/anniv.html."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAABMAAAAOBAMAAAA/Njq6AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAzXYQMplE74mrIma7\n3VSKKnSYAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAkElEQVQIHWNgVGYJY2COUHVgYGD//1+BgfEB\n8y0GBsZOLQaG7QwMjQwMnAxAcJKB4b0BhPmTgSH/AQPnblUH5q9ApgIDjwHXN64fDAz+DSCVZxHM\n+MVAUaCCiQwM/QlAte8fMBQyMMQb3GFg2G/AEMDAcJFBnYEhkIFhKQN3FQPvA+YSBgauiKkGDMxN\nmg4MAHGjI38bGCADAAAAAElFTkSuQmCC\n",
+      "text/latex": [
+       "$$50$$"
+      ],
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total2=( pi*(exp(A.doit()/B.doit()) - exp(I*(E/pi).doit().simplify()) )) / C.doit() / D.doit()\n",
+    "total2"
+   ]
   }
  ],
  "metadata": {
