Added the explanation of the parallel index sign with respect to the current drive direction

--- a/notebooks/TP Master Fusion/LH-Hands-on-multijunction.ipynb
+++ b/notebooks/TP Master Fusion/LH-Hands-on-multijunction.ipynb
@@ -465,6 +465,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Current Drive Direction\n",
+    "Let's assume that the plasma current is clockwise as seen from the top of a tokamak. Let's also define the positive direction of the toroidal magnetic field being in the same direction than the plasma current, i.e. :\n",
+    "$$\n",
+    "\\mathbf{B}_0 = B_0 \\mathbf{e}_\\parallel\n",
+    "$$\n",
+    "and\n",
+    "$$\n",
+    "\\mathbf{I}_p = I_p \\mathbf{e}_\\parallel\n",
+    "$$\n",
+    "\n",
+    "Let be $\\mathbf{J}_{LH}$ the current density created by the Lower Hybrid system. The current density is expressed as\n",
+    "$$\n",
+    "\\mathbf{J}_{LH} = - n e v_\\parallel \\mathbf{e}_\\parallel\n",
+    "$$\n",
+    "where $v_\\parallel=c/n_\\parallel$. As we want the current driven to be in the same direction than the plasma current, i.e.:\n",
+    "$$\n",
+    "\\mathbf{J}_{LH}\\cdot\\mathbf{I}_p > 0\n",
+    "$$\n",
+    "one must have :\n",
+    "$$\n",
+    "n_\\parallel < 0\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### CSS Styling"
    ]
   },
